<resources>
  <string name="app_name">Clarity for OmniFocus</string>
  <string name="app_name_short">Clarity</string>
  <string name="account_name">Omni Sync</string>
  <string name="account_type" translatable="false">nu.huw.clarity</string>
  <string name="sync_broadcastintent" translatable="false">nu.huw.ACTION_FINISHED_SYNC</string>
  <string name="sync_authority" translatable="false">nu.huw.clarity.sync</string>

  <!-- LoginActivity -->
  <string name="login_title">Welcome to Clarity</string>
  <string name="login_message">With Clarity for OmniFocus, you can focus on your tasks or write down killer ideas.</string>
  <string name="login_server">Server Address</string>
  <string name="login_username">Username</string>
  <string name="login_password">Password</string>
  <string name="login_passphrase">Encryption Passphrase</string>

  <string name="login_omnisync">Use the Omni Sync Server</string>
  <string name="login_privateserver">Use another server</string>
  <string name="login_encryptionsame">Use this password for encryption</string>
  <string name="login_serverhint">Write the full URL to your data, e.g. ‘https://sync.omnigroup.com:443/username’</string>
  <string name="login_errorserverurlinvalid">This server URL is invalid</string>
  <string name="login_errorusernamerequired">Enter a username</string>
  <string name="login_errorpasswordrequired">Enter a password</string>
  <string name="login_errorpassphraserequired">Enter a passphrase</string>

  <string name="login_signin">Sign in</string>
  <string name="login_error_serverinvalid">This server URL is incorrect</string>
  <string name="login_error_serverfault">There’s a problem with the server. Please try again.</string>
  <string name="login_error_servernoofocus">No OmniFocus data was found at this location</string>
  <string name="login_error_usernameincorrect">This user does not exist</string>
  <string name="login_error_passwordincorrect">This password is incorrect</string>
  <string name="login_error_passphraseincorrect">This passphrase is incorrect</string>

  <!-- Navigation Drawer -->
  <string name="menu_forecast">Forecast</string>
  <string name="menu_inbox">Inbox</string>
  <string name="menu_projects">Projects</string>
  <string name="menu_contexts">Contexts</string>
  <string name="menu_flagged">Flagged</string>
  <string name="menu_nearby">Nearby</string>

  <!-- List Items -->
  <string name="listitem_countavailableempty">no items available</string>
  <string name="listitem_countavailable">%d available</string>
  <string name="listitem_countremainingempty">no items remaining</string>
  <string name="listitem_countremaining">%d remaining</string>
  <string name="listitem_countcompletedempty">no items completed</string>
  <string name="listitem_countcompleted">%d completed</string>
  <string name="listitem_countchildrenempty">no items</string>
  <string name="listitem_countchildren">%d items</string>
  <string name="listitem_countduesoon">%d due soon</string>
  <string name="listitem_countoverdue">%d overdue</string>
  <string name="listitem_nocontext">No Context</string>
  <string name="listitem_sortdue">Due %s</string>
  <string name="listitem_sortdefer">Deferred until %s</string>
  <string name="listitem_sortcompleted">Completed %s</string>
  <string name="listitem_sortadded">Added %s</string>
  <string name="listitem_sortmodified">Modified %s</string>
  <string name="listitem_sortduration">%d minutes</string>

  <!-- List Headers -->
  <string name="listitem_headingflagged">Flagged</string>
  <string name="listitem_headingunflagged">Unflagged</string>
  <string name="listitem_headingtoday">Today</string>
  <string name="listitem_headingyesterday">Yesterday</string>
  <string name="listitem_headingweekearlier">Earlier this week</string>
  <string name="listitem_headingmonthearlier">Earlier this month</string>
  <string name="listitem_headingyearearlier">Earlier this year</string>
  <string name="listitem_headingpast">Past</string>
  <string name="listitem_headingtomorrow">Tomorrow</string>
  <string name="listitem_headingweeklater">Later this week</string>
  <string name="listitem_headingmonthlater">Later this month</string>
  <string name="listitem_headingyearlater">Later this year</string>
  <string name="listitem_headingfuture">Future</string>
  <string name="listitem_headingnodue">No due date</string>
  <string name="listitem_headingnodefer">Available now</string>
  <string name="listitem_headingweek">This week</string>
  <string name="listitem_headingmonth">This month</string>
  <string name="listitem_headingyear">This year</string>
  <string name="listitem_headingnocomplete">Incomplete</string>
  <string name="listitem_headingtasks">Tasks</string>
  <string name="listitem_headingcontexts">Contexts</string>
  <string name="listitem_headingprojects">Projects</string>
  <string name="listitem_headingfolders">Folders</string>
  <string name="listitem_headingitems">Items</string>
  <string name="listitem_headingnofolder">No folder</string>
  <string name="listitem_headingnoproject">No project</string>
  <string name="listitem_headingnocontext">No context</string>

  <!-- Empty States -->
  <string name="list_emptytitle">There’s nothing here</string>
  <string name="list_emptysubtitle">Pull down to sync\n(may take some time)\nor change
        perspectives \nfrom the menu</string>

  <!-- Detail View -->
  <string name="detail_task">Task</string>
  <string name="detail_context">Context</string>
  <string name="detail_project">Project</string>
  <string name="detail_folder">Folder</string>
  <string name="detail_name">Name</string>
  <string name="detail_flag">Flag</string>
  <string name="detail_duration">Estimated Duration</string>
  <string name="detail_defer">Defer Until</string>
  <string name="detail_due">Due</string>
  <string name="detail_repeat">Repeat</string>
  <string name="detail_status">Status</string>
  <string name="detail_projecttype">Type</string>
  <string name="detail_projectcomplete">Complete when completing last action</string>
  <string name="detail_gotoproject">Go to Project</string>
  <string name="detail_gotocontext">Go to Context</string>
  <string name="detail_none">None</string>
  <string name="detail_repeating">Repeating</string>
  <string name="detail_minutes">min</string>
  <string name="detail_active">Active</string>
  <string name="detail_onhold">On Hold</string>
  <string name="detail_dropped">Dropped</string>
  <string name="detail_projectparallel">Parallel</string>
  <string name="detail_projectsequential">Sequential</string>
  <string name="detail_projectsingleactions">Single Actions</string>
  <string name="detail_tabinfo">Info</string>
  <string name="detail_tabnote">Note</string>
  <string name="detail_tabattachments">Attachments</string>
  <string name="detail_note_hint">Tap to add a note</string>

  <!-- Notifications -->
  <string name="notification_duenow">Due now</string>
  <string name="notification_duesummarytext">%d items due</string>
  <string name="notification_duesummarytitle">Clarity for OmniFocus</string>
  <string name="sync_errortitle">Log in again</string>
  <string name="sync_errorpassphrase">Your passphrase has changed</string>
  <string name="sync_errorconnection">Couldn’t connect to the sync server</string>
  <string name="detail_clear">Clear</string>

</resources>
