<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/vertical_margin"
  android:paddingBottom="@dimen/vertical_margin"
  android:paddingStart="@dimen/horizontal_margin"
  android:paddingEnd="@dimen/horizontal_margin"
  android:clipChildren="false"
  android:clipToPadding="false"
  android:orientation="vertical"
  android:theme="@style/ThemeOverlay.AppTheme.Dark"
  tools:context=".ui.LoginActivity">

  <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <ImageView
      android:id="@+id/imageview_login_logo"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_centerHorizontal="true"
      android:src="@drawable/ic_checked"/>

    <TextView
      android:id="@+id/textview_login_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/vertical_margin"
      android:layout_below="@id/imageview_login_logo"
      android:layout_centerHorizontal="true"
      android:text="@string/login_title"
      android:textAlignment="center"
      android:textSize="@dimen/display1_size"/>

    <TextView
      android:id="@+id/textview_login_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/vertical_margin"
      android:layout_below="@id/textview_login_title"
      android:layout_centerHorizontal="true"
      android:text="@string/login_message"
      android:textAlignment="center"
      android:textSize="@dimen/subhead_size"/>

    <Button
      android:id="@+id/button_login_omnisync"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/vertical_margin"
      android:layout_below="@id/textview_login_message"
      android:background="@color/primary_dark"
      android:text="@string/login_omnisync"
      android:transitionName="transition_login_button"
      tools:targetApi="lollipop"/>

    <Button
      android:id="@+id/button_login_privateserver"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/vertical_margin"
      android:layout_below="@id/button_login_omnisync"
      android:background="@color/primary_dark"
      android:enabled="false"
      android:text="@string/login_privateserver"
      android:transitionName="button_login_privateserver"
      tools:targetApi="lollipop"/>

  </RelativeLayout>

</RelativeLayout>