<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/vertical_margin"
  android:paddingBottom="@dimen/vertical_margin"
  android:paddingLeft="@dimen/horizontal_margin"
  android:paddingRight="@dimen/horizontal_margin"
  android:clipChildren="false"
  android:clipToPadding="false"
  tools:context=".ui.LoginActivity">

  <!-- Login progress -->
  <ProgressBar
    android:id="@+id/progressbar_login_spinner"
    style="@style/Base.Widget.AppCompat.ProgressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:visibility="gone"/>

  <RelativeLayout
    android:id="@+id/relativelayout_login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true">

    <TextView
      android:id="@+id/textview_login_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="16dp"
      android:text="@string/login_title"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="@color/primary"/>

    <TextView
      android:id="@+id/textview_login_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_below="@id/textview_login_title"
      android:text="@string/login_message"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
      android:id="@+id/textview_login_action"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/textview_login_message"
      android:text="@string/login_action"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <android.support.v4.widget.Space
      android:id="@+id/space_login"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:layout_below="@id/textview_login_action"/>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/textinputlayout_login_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/space_login">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/textinputedittext_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:inputType="text"
        android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/textinputlayout_login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/textinputlayout_login_username">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/textinputedittext_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/login_signin"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/button_login_signin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_below="@id/textinputlayout_login_password"
      android:text="@string/login_signin"/>

  </RelativeLayout>
</RelativeLayout>
